# model-deployment-envelope

./: .gitignore  CLAUDE.md  DEMO_PLAN.md  README.md  pyproject.toml  run_dashboard.py
delivery_kit/: decision_register.md  gap_assessment.md
delivery_kit/reference_topologies/: api_backed.md  hybrid.md  on_premises.md
demo/: quick_demo.py  run_demo.py  tts_demo.py
examples/call-agent-v3/: golden_set.yaml  manifest.yaml
examples/tts-service/: customer_service_tts.py  integrate_your_tts.py  manifest.yaml
schemas/: data-class.schema.json  model-manifest.schema.json  placement-policy.schema.json  tool-manifest.schema.json
src/envelope/: __init__.py  types.py
src/envelope/api/: __init__.py  main.py
src/envelope/api/routes/: __init__.py  admin.py  inference.py  verification.py
src/envelope/cli/: __init__.py  main.py
src/envelope/declaration/: __init__.py  manifest.py  placement.py  taxonomy.py  tools.py
src/envelope/enforcement/: __init__.py  egress.py  escalation.py  ingress.py  key_broker.py  tool_gate.py
src/envelope/handoff/: __init__.py  escalation.py  reference_sink.py
src/envelope/handoff/adapters/: __init__.py  webhook.py
src/envelope/record/: __init__.py  encryption.py  hashchain.py  provenance.py  reproduction.py
src/envelope/runtime/: __init__.py  contract.py  lifecycle.py  placement.py
src/envelope/runtime/adapters/: __init__.py  base.py  local_tts.py  ollama.py  openai.py  vllm.py
src/envelope/ui/: __init__.py  dashboard.py
src/envelope/validation/: __init__.py  composition.py  placement.py  structural.py
src/envelope/verification/: __init__.py  canary.py  conformance.py  golden_set.py  report.py
starter_packs/bfsi/: example-manifest.yaml  placement.yaml  taxonomy.yaml
starter_packs/retail/: example-manifest.yaml  placement.yaml  taxonomy.yaml
tests/: __init__.py
tests/conformance/: test_escalation.py  test_forbidden_data_class.py  test_placement_denial.py  test_undeclared_tool.py
tests/unit/: test_hashchain.py  test_manifest.py
