[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "model-deployment-envelope"
version = "0.1.0"
description = "A declarative envelope around deployed AI models with platform-enforced boundaries and machine-checkable proofs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Model Deployment Envelope Team" }
]
keywords = ["ai", "ml", "deployment", "security", "governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0",
    "ruamel.yaml>=0.18.0",
    "jsonschema>=4.20.0",
    "click>=8.1.0",
    "cryptography>=41.0.0",
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "python-multipart>=0.0.6",
    "aiosqlite>=0.19.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
]

[project.scripts]
envelope = "envelope.cli.main:cli"

[project.urls]
Homepage = "https://github.com/example/model-deployment-envelope"
Documentation = "https://github.com/example/model-deployment-envelope#readme"
Repository = "https://github.com/example/model-deployment-envelope"

[tool.hatch.build.targets.wheel]
packages = ["src/envelope"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
